Register view fixed, Answer dialogue text align fixed, Tab caraousel problem fixed, Home page gap removed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/comment.less
@@ -30,12 +30,6 @@
     padding-right: 3px;
 }
 
-.answer-text {
-    font-size: 14px;
-    color: #797575;
-}
-
-
 .article-details {
     padding: 3px;
 }
