--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -49,6 +49,7 @@ a {
 .answer-text {
     font-size: 16px;
     color: #797575;
+    text-align:justify;
 }
 
 .header-info {
